# any-desk

./: .env  Cargo.toml  README.md  package.json  pnpm-lock.yaml
.cargo/: config.toml
scripts/: start-controlled.sh  start-controller.sh
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/remote/: mod.rs  network.rs
src/components/: ConnectionView.vue  ControlView.vue
